--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <title>Do You Love Me?</title>
   <link rel="stylesheet" href="styleMain.css">
   <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:wght@400;700&display=swap" rel="stylesheet">
+
+
+  <script>
+  // Toggle Maintenance Mode
+  const MAINTENANCE_MODE = true; // true = ON, false = OFF
+
+  if (MAINTENANCE_MODE) {
+    window.location.href = "/maintenance.html";
+  }
+</script>
+
+
+  
 </head>
 <body>
   <!-- Splash Screen -->
