--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <script>
   // Toggle Maintenance Mode
-  const MAINTENANCE_MODE = true; // true = ON (default), false = OFF
+  const MAINTENANCE_MODE = false; // true = ON (default), false = OFF
 
   if (MAINTENANCE_MODE) {
     window.location.href = "maintenance.html"; // relative path works inside repo
