--- a/index.html
+++ b/index.html
@@ -1,25 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Do You Love Me?</title>
+
+  <!-- CSS -->
   <link rel="stylesheet" href="styleMain.css">
   <link href="https://fonts.googleapis.com/css2?family=Sour+Gummy:wght@400;700&display=swap" rel="stylesheet">
 
-
-  <script>
-  // Toggle Maintenance Mode
-  const MAINTENANCE_MODE = false; // true = ON (default), false = OFF
-
-  if (MAINTENANCE_MODE) {
-    window.location.href = "maintenance.html"; // relative path works inside repo
-  }
-</script>
-
-
-
-  
+  <!-- Maintenance Mode Script -->
+  <script src="myscript.js?v=2"></script>
 </head>
 <body>
   <!-- Splash Screen -->
@@ -39,6 +30,7 @@
     </div>
   </div>
 
+  <!-- Main Site JS -->
   <script src="script.js"></script>
 </body>
 </html>
